--- a/user-register/inc/emailMessage.html
+++ b/user-register/inc/emailMessage.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 <title></title>
-<meta http-equiv= "Content-Type" content = "text/html; charset = UTF-8">
+<meta http-equiv= "Content-Type" content = "text/html; charset=UTF-8">
 </head>
 <body>
 <div>
-<a href = "http://www.bidlol.com/Food-Order-Entrepreneur-PHP/user-register/confirmEmailAddress.php?token={token}">Please click here to confirm your email address></a>
+<a href = "http://www.bidlol.com/Food-Order-Entrepreneur-PHP/user-register/confirmEmailAddress.php?token={token}">Please click here to confirm your email address.</a>
 </div>
 </body>
 </html>
